<resources>
    <string name="app_name">DAA-lab3</string>

    <string name="notes">Mes notes</string>

    <string name="menu_sort">Trier</string>
    <string name="menu_sort_creation_date">Date de création</string>
    <string name="menu_sort_eta">A venir</string>
    <string name="menu_generate">Générer une note</string>
    <string name="menu_delete_all">Tout supprimer</string>

    <string name="nb_notes">11</string>

    <string name="schedule_late">late</string>
    <string name="schedule_now">now</string>
    <string name="note_icon_description">Define what type of note this is</string>
    <string name="schedule_icon_description">Define when this note is scheduled</string>
</resources>