<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu_show_sorting_option"
        android:title="@string/menu_sort"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/main_menu_sort_creation_date"
                android:title="@string/menu_sort_creation_date" />
            <item
                android:id="@+id/main_menu_sort_eta"
                android:title="@string/menu_sort_eta" />
        </menu>
    </item>
    <item
        android:id="@+id/main_menu_generate"
        android:title="@string/menu_generate" />
    <item
        android:id="@+id/main_menu_delete_all"
        android:title="@string/menu_delete_all" />
</menu>